<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/love_svgrepo_com"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_modelml"
        android:icon="@drawable/camera_svgrepo_com"
        android:title="@string/title_modelml" />

    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/marketplace_svgrepo_com"
        android:title="@string/title_marketplace" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile" />

</menu>