<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkitc23ps404.huze.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bangkitc23ps404.huze.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_modelml"
        android:name="com.bangkitc23ps404.huze.ui.modelml.ModelmlFragment"
        android:label="@string/title_modelml"
        tools:layout="@layout/fragment_modelml" />

    <fragment
        android:id="@+id/navigation_marketplace"
        android:name="com.bangkitc23ps404.huze.ui.marketplace.MarketPlaceFragment"
        android:label="@string/title_marketplace"
        tools:layout="@layout/fragment_market_place" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkitc23ps404.huze.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>