<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_dogs_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ras_anjing"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Dogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_dogs_breed"
            tools:listitem="@layout/item_dogs"/>

        <TextView
            android:id="@+id/tv_cats_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ras_kucing"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/rv_Dogs"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Cats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv_cats_breed"
            tools:listitem="@layout/item_cats"/>

        <TextView
            android:id="@+id/tv_artikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Artikel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/rv_Cats"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Artikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_artikel"
            tools:listitem="@layout/item_artikel"/>

    </RelativeLayout>

</ScrollView>